# ngram

./: .env  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  COVERAGE_REPORT.md  README.md  map.md  map_app.md  map_docs.md  map_docs_cli.md  map_docs_protocol.md  modules.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
.ngram/: CLAUDE.md  GEMINI.md  PRINCIPLES.md  PROTOCOL.md  doctor-ignore.yaml  schema.yaml
app/: globals.css  layout.tsx  page.tsx
data/: ARCHITECTURE — Cybernetic Studio.md  ChatGPT_Conversation_Nouveau_Monde.md  NGRAM Documentation Chain Pattern (Draft “Marco”).md  connectome_health_pack.zip:Zone.Identifier  graph_scope_classification.yaml
docs/: SYNC_Project_Repository_Map.md  SYNC_Project_Repository_Map_archive_2025-12.md  map.md
engine/: init_db.py
ngram/: __init__.py  agent_cli.py  agent_graph.py  agent_spawn.py  cli.py  cluster_metrics.py  context.py  core_utils.py  docs_fix.py  doctor.py  doctor_checks.py  doctor_checks_content.py  doctor_checks_core.py  doctor_checks_docs.py  doctor_checks_invariants.py  doctor_checks_membrane.py  doctor_checks_metadata.py  doctor_checks_naming.py  doctor_checks_prompt_integrity.py  doctor_checks_quality.py  doctor_checks_reference.py  doctor_checks_stub.py  doctor_checks_sync.py  doctor_files.py  doctor_graph.py  doctor_report.py  doctor_types.py  github.py  graph_query.py  init_cmd.py  project_map.py  project_map_html.py  prompt.py  protocol_runner.py  protocol_validator.py  refactor.py  repair.py  repair_core.py  repair_escalation_interactive.py  (+18 more)
tools/: ngrok.yml  (+5 more)
(+685 files in other folders)
