[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ngram"
version = "0.1.0"
description = "Memory for AI agents - Protocol for context, state, and handoffs across sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Mind Protocol" }
]
keywords = [
    "ai",
    "agents",
    "context",
    "documentation",
    "llm",
    "claude",
    "memory",
    "handoff"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/mind-protocol/ngram"
Repository = "https://github.com/mind-protocol/ngram"

[project.optional-dependencies]
tui = ["textual>=0.45.0"]
all = ["textual>=0.45.0"]

[project.scripts]
ngram = "ngram.cli:main"

# Include templates in the package
[tool.hatch.build.targets.wheel]
packages = ["ngram"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "ngram/templates"

[tool.hatch.build.targets.sdist]
include = [
    "/ngram",
    "/templates",
    "/docs",
    "/README.md",
    "/pyproject.toml",
]
